# Travel-Planner

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
travel_planner/: api.py  asgi.py  settings.py  urls.py  wsgi.py
trips/: admin.py  models.py  schemas.py  views.py
trips/migrations/: 0001_initial.py
trips/services/: art_institute.py
